--- a/src/main/webapp/index.css
+++ b/src/main/webapp/index.css
@@ -28,8 +28,8 @@ margin-left: 8rem;
   border: 1px solid #ccc;
   border-radius: 5px;
   padding: 5px;
-border: solid black;
- margin-left: rem;
+ /*  border: solid black;
+ margin-left: rem; */
 }
 
 .search-box input[type="text"] {
@@ -51,8 +51,8 @@ border: solid black;
 .cart{
 /*     border: solid black; */
 /* border: solid black; */
-     width: 10rem; 
-     width:0rem; 
+     width: 10rem;
+     width:0rem;
 }
 
 .cart a {
@@ -83,7 +83,7 @@ border: solid black;
 }
 .item-1{
     flex-grow: 2;
-} 
+}
 .container-imagesBox {
   display: grid;
   grid-template-columns: 3fr 3fr;
@@ -98,12 +98,12 @@ border: solid black;
 
 .box {
     width: 100%;
-     height: 700px; 
+     height: 700px;
   background-color: #ccc;
 }
 
 .item-1 {
-     margin-right: 1rem; 
+     margin-right: 1rem;
   grid-row: 1 / span 2;
   grid-column: 1 / span 1;
   height: 40rem;
